# gridman

./: .gitignore  LICENSE  README.md  gdal-3.10.3-cp312-cp312-win_amd64.whl  package-lock.json  package.json  prompt.md  pyproject.toml
crms/: grid.py
crms/grid/: __init__.py
crms/grid/icrm/: __init__.py
electron/: main.ts  preload.ts
icrms/: igrid.py
scripts/: chat.py  grid_crm_launcher.py  grid_mcp_server.py
src/framework/: .env.example  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/framework/public/shaders/: triangle.glsl
src/framework/src/: App.css  App.tsx  store.ts
src/framework/src/components/: framework.tsx  framework_old.tsx  testData.ts  types.ts
src/framework/src/contexts/: MapContentContext.tsx  types.ts
src/framework/src/core/: types.ts
src/framework/src/resource/: iconRegistry.ts  scenarioNodeRegistry.tsx  scenarioRegistry.tsx
src/framework/test/: demo.tsx  test.yaml
src/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/frontend/src/: App.css  App.tsx  context.ts  custom.css  demo.tsx  editor-style.css  electron.d.ts  main.tsx  store.ts
src/gridman/: main.py
src/gridman/api/: router.py
src/gridman/compos/: grid_comp.py
src/gridman/core/: .env.example  config.py  mcp_client copy.py  mcp_client.py  server.py
src/gridman/schemas/: __init_.py  grid.py  project.py  schema.py
template/: tsconfig.app.json
template/src/: App.css  App.tsx
(+331 files in other folders)
