[project]
name = "gridman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "c-two>=0.1.16",
    "fastapi>=0.115.12",
    "gdal>=3.10.2",
    "jinja2>=3.1.6",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]
